pty: Use NSIG instead of SIGUNUSED

... and with a fallback to 8 * sizeof(sigset_t) if NSIG is undefined.

https://bugzilla.gnome.org/show_bug.cgi?id=759196